--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "eslint": "^8.46.0",
     "eslint-config-next": "^13.4.12",
     "typescript": "^5.1.6"
+  },
+  "volta": {
+    "node": "18.17.0",
+    "npm": "9.8.1"
   }
 }
