--- a/.github/workflows/deployment_develop.yaml
+++ b/.github/workflows/deployment_develop.yaml
@@ -9,6 +9,8 @@ jobs:
     environment:
       name: develop
     steps:
+      - uses: actions/checkout@v3
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
