--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,scss,html}\"",
-    "prepare": "husky install",
+    "prepare": "husky install & panda codegen",
     "lint-staged": "lint-staged",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@fontsource/material-icons": "^5.0.6",
     "@fontsource/roboto": "^5.0.7",
+    "@pandacss/dev": "^0.9.0",
     "@storybook/addon-essentials": "^7.2.0",
     "@storybook/addon-interactions": "^7.2.0",
     "@storybook/addon-links": "^7.2.0",
