--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@kuma-ui/core": "^1.1.1",
     "@mui/material": "^5.14.3",
     "next": "^13.4.12",
     "react": "^18.2.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@fontsource/material-icons": "^5.0.6",
     "@fontsource/roboto": "^5.0.7",
+    "@kuma-ui/next-plugin": "^1.1.3",
     "@storybook/addon-essentials": "^7.2.0",
     "@storybook/addon-interactions": "^7.2.0",
     "@storybook/addon-links": "^7.2.0",
