--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-storybook": "^0.6.13",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
+    "modern-css-reset": "^1.4.0",
     "prettier": "^3.0.0",
     "sst": "^2.22.10",
     "storybook": "^7.2.0",
