mui向けeslint設定追加

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,13 @@
     "react",
     "react-hooks",
     "import"
-  ]
+  ],
+  "rules": {
+    "no-restricted-imports": [
+      "error",
+      {
+        "patterns": ["@mui/*/*/*"]
+      }
+    ]
+  }
 }
