--- a/package.json
+++ b/package.json
@@ -52,6 +52,11 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
+    "reg-keygen-git-hash-plugin": "0.12.2",
+    "reg-notify-github-plugin": "0.12.2",
+    "reg-notify-github-with-api-plugin": "0.12.2",
+    "reg-publish-s3-plugin": "0.12.2",
+    "reg-suit": "0.12.2",
     "sst": "^2.22.10",
     "storybook": "^7.2.0",
     "typescript": "^5.1.6"
