--- a/.github/workflows/run_vrt.yaml
+++ b/.github/workflows/run_vrt.yaml
@@ -10,6 +10,12 @@ jobs:
     timeout-minutes: 30
     environment:
       name: develop
+    env:
+      REG_SUITE_CLIENT_ID: ${{ secrets.REG_SUITE_CLIENT_ID }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      REG_SUITE_S3_BUCKET_NAME: ${{ secrets.REG_SUITE_S3_BUCKET_NAME }}
     steps:
       - uses: actions/checkout@v2
         with:
