--- a/.github/workflows/run_vrt.yaml
+++ b/.github/workflows/run_vrt.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ steps.get-node-
+          node-version: ${{ steps.get-node-version.outputs.nodeVersion }}
 
       - name: NPM install
         run: npm install
