--- a/.github/workflows/run_vrt.yaml
+++ b/.github/workflows/run_vrt.yaml
@@ -3,11 +3,16 @@ name: Run VRT
 on:
   pull_request:
     branches: [ main ]
+    types: [ opened, synchronize ]
+  workflow_dispatch:
 
 jobs:
   run-vrt:
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    concurrency:
+      group: ${{ github.ref }}-vrt
+      cancel-in-progress: true
     environment:
       name: develop
     env:
@@ -20,6 +25,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
+      - name: workaround for detached HEAD
+        run: |
+          git checkout ${{github.head_ref}} && git pull
 
       - name: Get node version from volta
         id: get-node-version
