--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.3",
+    "@octokit/core": "^5.0.0",
+    "@octokit/types": "^11.1.0",
     "next": "^13.4.12",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "@fontsource/material-icons": "^5.0.6",
