--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@storybook/nextjs": "^7.2.0",
     "@storybook/react": "^7.2.0",
     "@storybook/testing-library": "^0.2.0",
+    "@svgr/webpack": "^8.0.1",
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
