--- a/.github/workflows/tsc.yaml
+++ b/.github/workflows/tsc.yaml
@@ -12,8 +12,11 @@ jobs:
           node-version: 18
           cache: npm
 
-      - run: npm install
+      - name: NPM install
+        run: npm install
 
-      - run: npm run lint
+      - name: Lint Check
+        run: npm run lint
 
-      - run: tsc
+      - name: TSC
+        run: tsc
