--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,19 @@
     "plugin:import/errors",
     "plugin:import/warnings",
     "plugin:import/typescript",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "next/core-web-vitals",
     "prettier",
     "plugin:storybook/recommended"
   ],
+  "parserOptions": {
+    "project": "./tsconfig.json",
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": "latest"
+  },
   "ignorePatterns": [
     "node_modules/*",
     "next.config.js"
@@ -24,6 +33,11 @@
         "patterns": ["@mui/*/*/*"]
       }
     ],
-    "no-unused-vars": "warn"
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_"
+      }
+    ]
   }
 }
