--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.3",
+    "@next/font": "^13.4.19",
     "@octokit/openapi-types": "^18.0.0",
     "next": "^13.4.12",
     "react": "^18.2.0",
